Switching to a blank slot during render makes those tiles displayed as transparent. #36449

Closed
opened 2013-08-12 20:46:08 +02:00 by gandalf3 · 6 comments
Member

%%%--- Operating System, Graphics card ---

Archlinux

- Blender version with error, and version that worked ---

2.68a

- Short description of error ---

Switching to a blank slot during a render makes any tiles rendered during that time displayed as transparent after switching back to the slot being rendered.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Start render
  2. Switch slot
  3. Switch slot back
  4. Tiles rendered while viewing the black slot are displayed as transparent
  5. Once the render is complete those tiles are displayed correctly

%%%

%%%--- Operating System, Graphics card --- Archlinux - Blender version with error, and version that worked --- 2.68a - Short description of error --- Switching to a blank slot during a render makes any tiles rendered during that time displayed as transparent after switching back to the slot being rendered. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Start render 2. Switch slot 3. Switch slot back 4. Tiles rendered while viewing the black slot are displayed as transparent 5. Once the render is complete those tiles are displayed correctly %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can confirm this behavior. Setting small tile size with a larger render size gives more opportunity to switch between slots during render.

r59138

I don't know if I would consider this a bug, though, since it refreshes the buffer at the end and fixes itself. %%%

%%%I can confirm this behavior. Setting small tile size with a larger render size gives more opportunity to switch between slots during render. r59138 I don't know if I would consider this a bug, though, since it refreshes the buffer at the end and fixes itself. %%%
Member

%%%I think this is a real edge-case... not a feature meant to be working under this condition.
Will ask Brecht to confirm though.%%%

%%%I think this is a real edge-case... not a feature meant to be working under this condition. Will ask Brecht to confirm though.%%%

%%%We had a report about switching slots during render failing before, probably best if this is disabled.%%%

%%%We had a report about switching slots during render failing before, probably best if this is disabled.%%%

%%%Well, it's nice to have it work anyway, I've noticed this myself when comparing some renders while they still rendering. Fix in svn revision 59778, thanks for the report.%%%

%%%Well, it's nice to have it work anyway, I've noticed this myself when comparing some renders while they still rendering. Fix in svn revision 59778, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36449
No description provided.