Fix #36449: switching between render slots during render would leave some tiles black until the end of the render.